--- a/css/layout.css
+++ b/css/layout.css
@@ -18,7 +18,7 @@
   width: 100%;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (width >= 768px) {
   .container {
     max-width: 900px;
   }
@@ -31,4 +31,18 @@
   .column-half {
     width: 50%;
   }
+}
+
+.img-to-add {
+  width: 100%;
+  object-fit: contain;
+}
+
+.right {
+  justify-content: flex-end;
+}
+
+.white-on-purple {
+  background-color: rgb(76, 38, 118);
+  color: white;
 }
