--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ textarea {
   border-radius: 6px;
 }
 
+label {
+  border: 0;
+}
+
 label,
 input,
 textarea {
@@ -11,8 +15,7 @@ textarea {
   margin-bottom: 1rem;
 }
 
-input,
-textarea {
+.input {
   border: 1px solid rgb(162, 162, 162);
 }
 
@@ -22,6 +25,18 @@ input {
 
 .submit {
   margin: 0;
-  border-top: rgb(104, 107, 107);
-  border-bottom: rgb(11, 11, 15);
+  border-top: 2px solid rgb(104, 107, 107);
+  border-left: 2px solid rgb(104, 107, 107);
+  border-bottom: 2px solid rgb(11, 11, 15);
+  border-right: 2px solid rgb(11, 11, 15);
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+  border: 1px solid rgb(76, 38, 118);
+}
+
+.value-changed {
+  background-color: rgb(231, 240, 254);
 }
