--- a/css/layout.css
+++ b/css/layout.css
@@ -18,7 +18,8 @@
   width: 100%;
 }
 
-.img-to-add {
+.img-to-add,
+.entry-img {
   width: 100%;
   object-fit: contain;
 }
@@ -30,6 +31,14 @@
 .white-on-purple {
   background-color: rgb(76, 38, 118);
   color: white;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
 }
 
 @media screen and (width >= 768px) {
