Finalized view swapping #2
Added title to entries view, changed some CSS, added button in the navbar to change to entries view, and made sure that view swapping/page loading show the correct view

--- a/css/layout.css
+++ b/css/layout.css
@@ -41,6 +41,18 @@ li {
   list-style-type: none;
 }
 
+.centered-text {
+  text-align: center;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
 @media screen and (width >= 768px) {
   .container {
     max-width: 900px;
