--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 .img-to-add,
 .entry-img,
+.pseudo-button,
 input,
 textarea {
   border-radius: 6px;
@@ -40,4 +41,17 @@ textarea:focus {
 
 .value-changed {
   background-color: rgb(231, 240, 254);
+}
+
+.nav-bar {
+  align-items: center;
+  gap: 10px;
+}
+
+.pseudo-button {
+  height: 2rem;
+  text-align: center;
+  line-height: calc(2rem - 4px);
+  padding: 1px 6px;
+  font-size: calc(40px / 3);
 }
