Styled delete elements #4
This was a
little complex. Not only did it include HTML and CSS, but I have a button at the right of a row that I want to switc
h to space-between when the 'Delete Entry' button is visible (when editing), so it involved some js as well, both to
 toggle hidden for the button and to toggle the row's layout class.

--- a/css/layout.css
+++ b/css/layout.css
@@ -39,6 +39,10 @@
   align-items: center;
 }
 
+.bor-rad-6 {
+  border-radius: 6px;
+}
+
 @media screen and (width >= 768px) {
   .container {
     max-width: 900px;
